--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "fs": "0.0.1-security",
     "mysql": "^2.16.0",
-    "mysql2": "^1.6.4"
+    "mysql2": "^1.6.4",
+    "path": "^0.12.7",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "eslint": "^5.12.1"
